--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  firebase_dynamic_links: ^5.0.12
+  firebase_core: ^2.5.0
+  share_plus: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
